# cnh-wireless-strain-monitor

./: .air.toml  .gitignore  Dockerfile  Makefile  README.md  config.json  config_example.json  daq_data.db  go.mod  go.sum  gui.py  main.py  pyproject.toml  requirements.txt  run.py  run_oscilloscope_demo.py
cmd/server/: main.go
docs/: DATA_OUTPUT_FORMAT.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_STATUS.md  technical_documentation.md
docs/examples/: complete_example.py  oscilloscope_example.py
go-server/: go.mod
go-server/cmd/server/: main.go
internal/data/: buffer.go  database.go  manager.go  oscilloscope.go
internal/models/: models.go
internal/simulator/: daq_simulator.go
internal/websocket/: hub.go
scripts/: setup_env.ps1  setup_env.sh
simulator/: __init__.py  daq_simulator.py  esp32_simulator.py  hx711_simulator.py  main.py
simulators/: esp32_simulator.h  hx711_simulator.c  hx711_simulator.h
src/: __init__.py
src/communication/: __init__.py  ble_simulator.py  protocol.py
src/core/: __init__.py  config.py  models.py
src/data/: __init__.py  data_manager.py  oscilloscope_api.py
tests/: __init__.py  test_models.py  test_simulators.py
web/: index.html
web/css/: style.css
web/js/: app.js
