[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=src --cov-report=html --cov-report=term-missing"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daq-system"
version = "1.0.0"
description = "Sistema DAQ Autônomo e Sem Fio para Análise de Fadiga Estrutural"
authors = [
    {name = "Gabriel Hiro Furukawa"},
    {name = "Rafael Perassi Zanchetta"}
]
dependencies = [
    "PyQt5>=5.15.0",
    "bleak>=0.19.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "matplotlib>=3.6.0",
    "pytest>=7.0.0",
    "faker>=15.0.0"
]
